--- a/staff/staff.css
+++ b/staff/staff.css
@@ -9,6 +9,8 @@ body{
     height: 97%;
     margin: 12px;
     border-radius: 10px; 
+    box-shadow:  5px 5px 10px #bababa,
+    -5px -5px 10px #ffffff;
 } 
 .bg-body-tertiary >a{  
     flex-wrap:wrap;
