--- a/staff/staff.css
+++ b/staff/staff.css
@@ -35,8 +35,11 @@ li.nav-item.active {
 .nav-link{ 
     font-size: 13pt;
 }
-.dropdown > a{ 
-    justify-content: space-around;
+.user-header {  
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-evenly;
 }
 .nav-link > i{
     margin-right: 10px; 
