--- a/staff/staff.css
+++ b/staff/staff.css
@@ -1,7 +1,7 @@
 body{ 
     height: 100vh;
     width: 100vw;
-    background-color: #AFCCB5;
+    background-color: #e0e0e0;
     font-family: "Poppins";
     display: flex;
     align-items: center;
@@ -10,8 +10,9 @@ body{
     flex-direction: column;
 }
 .bg-body-tertiary{ 
-    width: 22%;
+    width: 20%;
     height: 95%; 
+    margin: 12px;
     border-radius: 10px; 
     box-shadow:  5px 5px 10px #bababa,
     -5px -5px 10px #dfdfdf;
@@ -27,8 +28,7 @@ h2{
     margin: 0%;
 }
 li.nav-item.active {
-    background-color: #abffab;
-    border: 0.5px solid #4eef4e;
+    background-color: #abffab; 
     font-weight: bold;
     border-radius: 10px;
 }
@@ -39,20 +39,137 @@ li.nav-item.active {
     margin-right: 10px; 
 }
 .active{
-    --bs-dropdown-link-active-bg: #2FF05C; 
+    --bs-dropdown-link-active-bg: #8effa8; 
 }
 .board{  
-    width: 74%;
-    height: 95%;
+    width: 78%;
+    height: 95%;  
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 100px 1fr; 
+    gap: 2px;
+}
+.board h3{
+    font-size: 17pt;
+    font-weight: 800; 
+}
+.header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    background-color: rgba(255, 255, 255, 0.849);
     border-radius: 10px;
-    background: #ffffffd4;
     box-shadow:  5px 5px 10px #bababa,
-    -5px -5px 10px #dfdfdf;
+                -5px -5px 10px #dfdfdf;
+    padding :10px;
+}
+.text{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.text > title{
+    margin: 2px;
+}
+.text > .datetime >p{
+    margin: 0%;
+}
+.user-header{
+    padding: 10px;
+}
+.content{
     display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 1fr ;
 }
 .overview{  
-    grid-area: 1 1 2 2;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
     display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: space-around; 
+}
+.ovw-con{
+    width: 95%;
+    height: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 12px;
+    background: linear-gradient(145deg, #90e685, #abff9e); 
+}
+.line{
+    border-left: 2px solid rgba(122, 122, 122, 0.39) ;
+    height: 95%;
+}
+.duebooks{
+    grid-column-start: -1;
+    grid-column-end: -2;
+    grid-row-start: 1;
+    grid-row-end: 2; 
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: space-around; 
+}
+.duebooks-con{
+    width: 95%;
+    height: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: rgba(255, 255, 255, 0.849);
+    border-radius: 10px;
+    box-shadow:  5px 5px 10px #bababa,
+                -5px -5px 10px #dfdfdf;
+}
+.stats{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3; 
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: space-around; 
+}
+.stats-con{
+    width: 95%;
+    height: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly; 
+    background-color: rgba(255, 255, 255, 0.849);
+    border-radius: 10px;
+    box-shadow:  5px 5px 10px #bababa,
+                -5px -5px 10px #dfdfdf;
+}
+.newbooks{
+    grid-column-start: -2;
+    grid-column-end: -2;
+    grid-row-start: 2;
+    grid-row-end: 3; 
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: space-around; 
+}
+.newbooks-con{
+    width: 95%;
+    height: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: rgba(255, 255, 255, 0.849);
+    border-radius: 10px;
+    box-shadow:  5px 5px 10px #bababa,
+                -5px -5px 10px #dfdfdf;
 }
