--- a/staff/staff.css
+++ b/staff/staff.css
@@ -1,6 +1,6 @@
 body{ 
-    height: 100vh;
     width: 100vw;
+    height: 100vh;
     background-color: #e0e0e0;
     font-family: "Poppins";
     display: flex;
@@ -9,8 +9,11 @@ body{
     flex-wrap: wrap;
     flex-direction: column;
 }
+::-webkit-scrollbar {
+    display: none;
+}
 .bg-body-tertiary{ 
-    width: 20%;
+    width: 275px;
     height: 95%; 
     margin: 12px;
     border-radius: 10px; 
@@ -46,16 +49,39 @@ li.nav-item.active {
     height: 95%;  
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 100px 1fr; 
+    grid-template-rows: 72px 1fr; 
     gap: 2px;
 }
 .board h3{
     font-size: 17pt;
     font-weight: 800; 
 }
+.board > .books{
+    width: 1039px;
+    height: 98%; 
+    overflow-y: auto;
+    background-color: #f8f9fa;
+    box-shadow:  5px 5px 10px #bababa,
+                -5px -5px 10px #dfdfdf;
+    padding: 5px;
+    border-radius: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    flex-direction: row;
+    justify-content: center;
+}
+.cap{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+}
 .header{
     display: flex;
     flex-direction: row;
+    align-content: center;
+    align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
     background-color: rgba(255, 255, 255, 0.849);
@@ -64,7 +90,51 @@ li.nav-item.active {
                 -5px -5px 10px #dfdfdf;
     padding :10px;
 }
+.header1{
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding :10px;
+}
+
+.searchbar form {
+    width: 400px;
+    height: 40px;
+    background-color: white;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    align-items: center;
+    gap:5px;
+}
+.searchbar form input{
+    width: 90%;
+    height: 100%;
+    padding: 5px;
+    border-bottom-left-radius: 15px;
+    border-top-left-radius: 15px;
+    outline: none;
+    border: none;
+
+}
+.searchbar form #search-icon{
+    width: 6%; 
+    font-size: 18pt;
+    cursor: pointer;
+}
+.searchbar form #search-icon:hover{ 
+    text-shadow: 1px 1px 20px rgba(71, 71, 73, 0.753);
+    color: black;
+    font-size: 18pt;
+    cursor: pointer;
+}
 .text{
+    height: 60px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -72,10 +142,13 @@ li.nav-item.active {
 .text > title{
     margin: 2px;
 }
-.text > .datetime >p{
-    margin: 0%;
+.text > .datetime{
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
 }
-.user-header{
+.user-header{ 
+    width: 265px;
     padding: 10px;
 }
 .content{
@@ -102,6 +175,18 @@ li.nav-item.active {
     justify-content: space-evenly;
     border-radius: 12px;
     background: linear-gradient(145deg, #90e685, #abff9e); 
+}
+.totalbooks, .totalvisits{
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    font-size: 22pt;
+    font-weight: 600;
+    gap: 50px;
+}
+.totalbooks h3, .totalvisits h3{
+    font-size: 25pt;
 }
 .line{
     border-left: 2px solid rgba(122, 122, 122, 0.39) ;
@@ -172,4 +257,58 @@ li.nav-item.active {
     border-radius: 10px;
     box-shadow:  5px 5px 10px #bababa,
                 -5px -5px 10px #dfdfdf;
+}
+.btn{
+    width: 200px;
+    height: auto;
+    padding: 10px;
+    margin: 3px;
+    font-size: 18px;
+    font-weight: 700;
+    border-radius: 5px; 
+    background-color: palegreen;
+    border: none;
+    color:black; 
+    transition: all 0.50s ease;
+}
+.btn:hover{
+    background-color: rgba(9, 122, 9, 0.726);
+    color: black;
+
+} 
+.settingForms{
+    width: 99%;
+    height: 535px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+.settingForms > #userProfileForm{
+    height: 50%;
+    width: 100%;
+    display: grid;
+    grid-template-rows: 30px 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+
+}
+.settingForms > #userPasswordForm{
+    height: 40%;
+    width: 100%;
+    display: grid;
+    grid-template-rows: 30px 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+}
+.settingForms > #userPasswordForm:nth-child(2){
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 3;
+    grid-row-end: 4;
+}
+.settingForms > form > h4{
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 2;
 }
