--- a/staff/staff.css
+++ b/staff/staff.css
@@ -49,7 +49,7 @@ li.nav-item.active {
     height: 95%;  
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 72px 1fr; 
+    grid-template-rows: 72px 1fr 50px; 
     gap: 2px;
 }
 .board h3{
@@ -153,8 +153,8 @@ li.nav-item.active {
 }
 .content{
     display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr 1fr ;
+    grid-template-columns: 640px 400px;
+    grid-template-rows: 45% 55% ;
 }
 .overview{  
     grid-column-start: 1;
@@ -168,7 +168,7 @@ li.nav-item.active {
     align-content: space-around; 
 }
 .ovw-con{
-    width: 95%;
+    width: 97%;
     height: 80%;
     display: flex;
     align-items: center;
@@ -204,7 +204,7 @@ li.nav-item.active {
     align-content: space-around; 
 }
 .duebooks-con{
-    width: 95%;
+    width: 97%;
     height: 80%;
     display: flex;
     align-items: center;
@@ -226,7 +226,7 @@ li.nav-item.active {
     align-content: space-around; 
 }
 .stats-con{
-    width: 95%;
+    width: 97%;
     height: 80%;
     display: flex;
     align-items: center;
@@ -248,15 +248,17 @@ li.nav-item.active {
     align-content: space-around; 
 }
 .newbooks-con{
-    width: 95%;
+    width: 97%;
     height: 80%;
+    padding: 10px;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-evenly;
     background-color: rgba(255, 255, 255, 0.849);
     border-radius: 10px;
-    box-shadow:  5px 5px 10px #bababa,
-                -5px -5px 10px #dfdfdf;
+    box-shadow: 5px 5px 10px #bababa, -5px -5px 10px #dfdfdf;
+    flex-direction: column;
+    flex-wrap: wrap
 }
 .btn{
     width: 200px;
