--- a/staff/staff.css
+++ b/staff/staff.css
@@ -146,7 +146,7 @@ li.nav-item.active {
     flex-direction: column;
     justify-content: space-between;
 }
-.text .back-btn{
+.text > .back-btn{
     width: 30px;
     height: 30px;
     border-radius: 50%;
