--- a/staff/staff.css
+++ b/staff/staff.css
@@ -52,24 +52,46 @@ li.nav-item.active {
     grid-template-rows: 72px 1fr 50px; 
     gap: 2px;
 }
-.board h3{
+.board1{  
+    width: 78%;
+    height: 95%;  
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 72px 1fr; 
+    gap: 2px;
+}
+.board h3,
+.board1 h3{
     font-size: 17pt;
     font-weight: 800; 
 }
-.board > .books{
+.books{
     width: 1039px;
-    height: 98%; 
+    height: 99%; 
     overflow-y: auto;
     background-color: #f8f9fa;
     box-shadow:  5px 5px 10px #bababa,
                 -5px -5px 10px #dfdfdf;
-    padding: 5px;
+    padding: 2px;
     border-radius: 10px;
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
     flex-direction: row;
     justify-content: center;
+}
+.books form{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    flex-direction: row;
+    padding: 30px 20px;
+    gap: 7px;display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    flex-direction: row;
+    padding: 30px 20px;
+    gap: 7px;
 }
 .cap{
     display: flex;
@@ -152,10 +174,12 @@ li.nav-item.active {
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.849);
     box-shadow: 5px 5px 10px #bababa, -5px -5px 10px #dfdfdf;
-    padding: 5PX;
     text-align: center;
 }
 .back-btn > a {
+    padding: 1px 5px;
+    border-radius: 50%;
+    font-size: 16pt;
     color: black;
     text-decoration: none;
     
@@ -170,7 +194,7 @@ li.nav-item.active {
     gap: 5px;
 }
 .user-header{ 
-    width: 265px;
+    width: 240px;
     padding: 10px;
 }
 .content{
