--- a/staff/staff.css
+++ b/staff/staff.css
@@ -275,12 +275,26 @@ li.nav-item.active {
     width: 97%;
     height: 80%;
     display: flex;
+    padding: 10px;
     align-items: center;
-    justify-content: space-evenly; 
+    justify-content: space-between;
     background-color: rgba(255, 255, 255, 0.849);
     border-radius: 10px;
-    box-shadow:  5px 5px 10px #bababa,
-                -5px -5px 10px #dfdfdf;
+    box-shadow: 5px 5px 10px #bababa, -5px -5px 10px #dfdfdf;
+    flex-wrap: wrap;
+    align-content: space-around;
+    flex-direction: row;
+}
+.chart{
+    width: 70%;
+    height: 98%;
+}
+.visitorRanking{
+    width: 30%;
+    height: 100%;
+    background-color: lightgreen;
+    border-radius: 10px;
+    padding: 5px;
 }
 .newbooks{
     grid-column-start: -2;
