--- a/staff/staff.css
+++ b/staff/staff.css
@@ -291,10 +291,15 @@ li.nav-item.active {
 }
 .visitorRanking{
     width: 30%;
-    height: 100%;
-    background-color: lightgreen;
+    height: 95%;
+    background-color: palegreen;
     border-radius: 10px;
     padding: 5px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: stretch;
 }
 .newbooks{
     grid-column-start: -2;
