--- a/staff/staff.css
+++ b/staff/staff.css
@@ -1,6 +1,7 @@
 body{ 
     width: 100vw;
     height: 100vh;
+    zoom: 100%;
     background-color: #e0e0e0;
     font-family: "Poppins";
     display: flex;
@@ -54,7 +55,7 @@ li.nav-item.active {
 }
 .board1{  
     width: 78%;
-    height: 95%;  
+    height: 93%;  
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 72px 1fr; 
@@ -200,7 +201,7 @@ li.nav-item.active {
 .content{
     display: grid;
     grid-template-columns: 640px 400px;
-    grid-template-rows: 45% 55% ;
+    grid-template-rows: 250px 280px ;
 }
 .overview{  
     grid-column-start: 1;
@@ -284,22 +285,6 @@ li.nav-item.active {
     flex-wrap: wrap;
     align-content: space-around;
     flex-direction: row;
-}
-.chart{
-    width: 70%;
-    height: 98%;
-}
-.visitorRanking{
-    width: 30%;
-    height: 95%;
-    background-color: palegreen;
-    border-radius: 10px;
-    padding: 5px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: stretch;
 }
 .newbooks{
     grid-column-start: -2;
