--- a/staff/staff.css
+++ b/staff/staff.css
@@ -67,7 +67,7 @@ li.nav-item.active {
     font-weight: 800; 
 }
 .books{
-    width: 1039px;
+    /* width: 1039px; */
     height: 99%; 
     overflow-y: auto;
     background-color: #f8f9fa;
