--- a/admin/admin.css
+++ b/admin/admin.css
@@ -1,3 +1,11 @@
+#loadingSpinner {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+
 body{ 
     height: 100vh;
     width: 100vw;
