--- a/admin/admin.css
+++ b/admin/admin.css
@@ -391,7 +391,7 @@ li.nav-item.active {
     display: flex;
     padding: 10px;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     background-color: rgba(255, 255, 255, 0.849);
     border-radius: 10px;
     box-shadow: 5px 5px 10px #bababa, -5px -5px 10px #dfdfdf;
@@ -464,44 +464,61 @@ li.nav-item.active {
     color: black;
 
 } 
-.settingForms{
+.settingForms{ 
     width: 99%;
-    height: 535px;
+    height: 100%;
     display: grid;
-    grid-template-columns: 350px 1fr;
-    grid-template-rows: 1fr 1fr;
-    align-items: start;
+    grid-template-columns: 40% 60%;
+    grid-template-rows: 75% 25%;
     justify-content: center;
+    align-items: center;
+    align-content: space-evenly;
 }
 .settingForms > #userProfileForm{
-    height: 100%;
-    width: 100%;
-    display: grid;
-    grid-template-rows: 30px 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    padding: 5px;
+    height: auto;
+    width: 100%; 
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
 
 }
-.settingForms > #imageUploadForm{
+.userProfile{
+    display: flex; 
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 5px;
+}
+.settingForms > #imageUploadForm{ 
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
+    align-content: center;
+    align-items: center;
 }
 .settingForms > #userPasswordForm{
-    height: 100%;
-    width: 100%;
-    display: grid;
-    grid-template-rows: 30px 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
+    padding: 5px;
+    height: auto;
+    width: 100%;  
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 3;
+}
+.userPassword{ 
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content: center;
+    align-items: center;
 }
 .settingForms > #userPasswordForm:nth-child(2){
     grid-column-start: 1;
