--- a/admin/admin.css
+++ b/admin/admin.css
@@ -3,9 +3,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-  }
-  
-
+  } 
 body{ 
     width: 100vw;
     height: 100vh;
@@ -260,6 +258,11 @@ li.nav-item.active {
     grid-template-columns: 60% 40%;
     grid-template-rows: 40% 60% ;
 }
+.content1{
+    display: grid;
+    grid-template-columns: 60% 40%;
+    grid-template-rows: 26% 74%;
+}
 .overview{  
     grid-column-start: 1;
     grid-column-end: 2;
@@ -284,7 +287,7 @@ li.nav-item.active {
 }
 .ovw-con{
     width: 97%;
-    height: 80%;
+    height: 75%;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
