--- a/admin/admin.css
+++ b/admin/admin.css
@@ -60,7 +60,7 @@ li.nav-item.active {
     height: 95%;  
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 11% 1fr 50px; 
+    grid-template-rows: 11% 81% 7%; 
     gap: 2px;
 }
 .board1{   
@@ -68,7 +68,7 @@ li.nav-item.active {
     height: 95%;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 11% 1fr;
+    grid-template-rows: 11% 89%;
     gap: 2px;
 }
 .board h3,
@@ -108,8 +108,8 @@ li.nav-item.active {
 }
 .catalogCon{
     width: 99%;
-    height: 32%;
-    max-height: 32%;
+    height: 100%;
+    max-height: 100%;
     overflow-y: auto;
     background-color: #f8f9fa;
     box-shadow: 5px 5px 10px #bababa, -5px -5px 10px #dfdfdf;
